<resources>
    <string name="app_name">PowerpuffGirls</string>
    <string name="res_title">Title</string>
    <string name="res_description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="res_link">I am a link</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="upload_image">Upload Image</string>
    <string name="african_american_black">African American/Black</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="asian">Asian</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="title_userprofile_list">Items</string>
    <string name="title_userprofile_detail">UserProfile Detail</string>
    <string name="tell_us">Tell Us About</string>
</resources>